# PicoROM

./: .gitignore  LICENSE  README.md  cert.pem  set_version.py
.github/: firmware.yml
.github/workflows/: firmware.yml  python.yml  release.yml  tool.yml
RP2040_minimal/: RP2040_minimal.kicad_pcb  RP2040_minimal.kicad_pro  RP2040_minimal.kicad_sch  sym-lib-table
benchmark/: CMakeLists.txt  full_probes.dsc  genrom.py  main.cpp  measure.py  probes.dsc
docs/: 200Mhz.dsl  delay.py
firmware/: .clang-format  .gitignore  CMakeLists.txt  comms.cpp  comms.h  comms.pio  data_bus.pio  debug.c  debug.h  flash.cpp  flash.h  flash_name.h  generate_build_time.cmake  main.cpp  peripherals.cpp  peripherals.h  pico_link.cpp  pico_link.h  pio_programs.cpp  pio_programs.h  reset_interface.c  rom.cpp  rom.h  str_util.cpp  str_util.h  system.h  tusb_config.h  usb_descriptors.c
firmware/pico_fota_bootloader/: .clang-format  CMakeLists.txt  LICENSE  README.md
firmware/pico_fota_bootloader/include/: mbedtls_config.h
firmware/pico_fota_bootloader/include/pico_fota_bootloader/: core.h
firmware/pico_fota_bootloader/linker_common/: app2040.ld  app2350.ld  boot2040.ld  boot2350.ld  linker_definitions.h  linker_definitions.in
firmware/pico_fota_bootloader/scripts/: aes_encrypt.py  sha256_append.py
firmware/pico_fota_bootloader/src/: bootloader_app.c  flash_utils.c  flash_utils.h  pico_fota_bootloader.c
hardware/: PicoROM-rescue.lib  PicoROM.csv  PicoROM.kicad_pcb  PicoROM.kicad_pro  PicoROM.kicad_sch  fabrication-toolkit-options.json  fp-lib-table  sym-lib-table
hardware/3dshapes/: DHVQFN24_L5.5-W3.5-H0.9-P0.50-BL-EP.step  DHVQFN24_L5.5-W3.5-H0.9-P0.50-BL-EP.wrl  USB-C-SMD_GT-USB-7051A.step  USB-C-SMD_GT-USB-7051A.wrl  USON-6_L1.5-W1.0-H0.7-P0.50-BL.step  USON-6_L1.5-W1.0-H0.7-P0.50-BL.wrl  USON-8_L2-W3-H0.6X0.5P.wrl  V-QFN4525-20_L4.5-W2.5-P0.50-BL.step  V-QFN4525-20_L4.5-W2.5-P0.50-BL.wrl  X2QFN-8_L1.5-W1.5-P0.50-BL.step  X2QFN-8_L1.5-W1.5-P0.50-BL.wrl
hardware/PicoROM/: PicoROM.kicad_pro  PicoROM.kicad_sch  fp-lib-table
hardware/PicoROM-28/: PicoROM-28.kicad_pcb  PicoROM-28.kicad_pro  PicoROM-28.kicad_sch
hardware/PicoROM-28/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
hardware/PicoROM-32/: PicoROM-32.kicad_pcb  PicoROM-32.kicad_pro  PicoROM-32.kicad_sch  PicoROM.kicad_pcb  PicoROM.kicad_pro  sym-lib-table
hardware/PicoROM-32/production/: bom.csv  netlist.ipc  positions.csv
hardware/PicoROM.pretty/: DHVQFN24_L5.5-W3.5-P0.50-BL-EP.kicad_mod  IC_SN74LVC8T245RHLR.kicad_mod  USB-C-SMD_GT-USB-7051A.kicad_mod  USON-6_L1.5-W1.0-P0.50-BL.kicad_mod  V-QFN4525-20_L4.5-W2.5-P0.50-BL.kicad_mod  X2QFN-8_L1.5-W1.5-P0.50-BL.kicad_mod  project_logo.kicad_mod  project_logo_large.kicad_mod  project_qrcode.kicad_mod
hardware/PicoROM/production/: designators.csv
hardware/TCA5404/: 2024-05-06_03-40-37.kicad_sym
hardware/TCA5404/footprints.pretty/: RUG8.kicad_mod
hardware/jlcpcb/: project.db
hardware/jlcpcb/gerber/: PicoROM-CuBottom.gbr  PicoROM-CuIn1.gbr  PicoROM-CuIn2.gbr  PicoROM-CuTop.gbr  PicoROM-EdgeCuts.gbr  PicoROM-MaskBottom.gbr  PicoROM-MaskTop.gbr  PicoROM-NPTH.drl  PicoROM-PTH.drl  PicoROM-PasteBottom.gbr  PicoROM-PasteTop.gbr  PicoROM-SilkBottom.gbr  PicoROM-SilkTop.gbr  PicoROM-VScore.gbr
hardware/jlcpcb/production_files/: BOM-PicoROM-3v3.csv  BOM-PicoROM-5v-1_2.csv  BOM-PicoROM.csv  CPL-PicoROM-3v3.csv  CPL-PicoROM-5v-1_2.csv  CPL-PicoROM.csv
hardware/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
host/: .gitignore
host/picolink/: Cargo.toml
host/picolink/src/: lib.rs  picoboot.rs  picolink.rs
host/picorom/: Cargo.toml  build.rs
host/picorom/src/: embedded_firmware.rs  firmware.rs  main.rs  rom_size.rs  uf2.rs
host/picorom/src/commands/: commit.rs  download.rs  firmware.rs  identify.rs  list.rs  mod.rs  parameter.rs  rename.rs  reset.rs  upload.rs
host/picorom_cli/src/: main.rs  pico_link.rs
host/pypicorom/: Cargo.toml  pyproject.toml
host/pypicorom/.env/: pyvenv.cfg
host/pypicorom/src/: lib.rs
picorom_cli/: Cargo.toml
picorom_cli/src/: enumerate.rs  main.rs  pico_link.rs  rom_size.rs
signal_gen/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  comms.cpp  data_bus.pio  firmware.cpp  memmap_firmware.ld  pico_link.cpp  pico_link.h  read_handler.S  rom.cpp  rom.h  state_machines.cpp  state_machines.h  system.h
