[package]
name = "picorom_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serialport = "4.2"
clap = { version = "4", features = ["derive", "string"] }
clap-num = "1"
num-traits = "0.2"
num-derive = "0.4"
indicatif = "0.17"
