[package]
name = "picorom"
version = "1.7.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "string"] }
clap-num = "1"
indicatif = "0.17"
dialoguer = "0.12.0"
rawzip = "0.4.3"
flate2 = "1.1.5"

picolink = { path = "../picolink" }
