[package]
name = "picorom"
version = "1.7.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "string"] }
clap-num = "1"
ctrlc = "3.4"
indicatif = "0.17"

picolink = { path = "../picolink" }
