[package]
name = "picorom"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "string"] }
clap-num = "1"
dialoguer = "0.11"
indicatif = "0.17"
zip = "2"

picolink = { path = "../picolink" }
