[package]
name = "pypicorom"
version = "1.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pypicorom"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["anyhow", "abi3-py310"] }
picolink = { path = "../picolink" }
